Created components for worker page and created worker page layout

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,1 +1,4 @@
-<app-materials-table></app-materials-table>
+<app-worker-page></app-worker-page>
+<!-- <app-header></app-header>
+<app-order-card></app-order-card> -->
+<!-- <app-materials-table></app-materials-table> -->
