--- a/frontend/src/app/materials-table/materials-table.component.html
+++ b/frontend/src/app/materials-table/materials-table.component.html
@@ -31,8 +31,8 @@
 <table class="tab-border">
   <ng-container>
     <tr>
-      <th class="tab-head">Name</th>
-      <th class="tab-head">Quantity</th>
+      <th class="tab-head">Назва</th>
+      <th class="tab-head">Кількість</th>
       <th class="tab-head"></th>
     </tr>
   </ng-container>
