--- a/frontend/src/app/order-card/order-card.component.html
+++ b/frontend/src/app/order-card/order-card.component.html
@@ -1,7 +1,14 @@
 <div [class.order-accepted]="order.status === 4" class="order">
   <div class="order-header">
     <div class="order-header-item">{{ order.name }}</div>
-    <div class="order-header-item"></div>
+    <div class="order-header-item">
+      <span *ngIf="newOrder" class="material-icons icon-style">
+        assignment_return
+      </span>
+      <span *ngIf="withDelete" class="material-icons icon-style delete-icon">
+        add_circle
+      </span>
+    </div>
   </div>
   <div class="order-properties">
     <div class="order-properties-item">{{ order.quantity }} штук</div>
