Added Sales manager page

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,4 +1,5 @@
-<app-worker-page></app-worker-page>
+<app-sales-manager-page></app-sales-manager-page>
+<!-- <app-worker-page></app-worker-page> -->
 <!-- <app-header></app-header>
 <app-order-card></app-order-card> -->
 <!-- <app-materials-table></app-materials-table> -->
