--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,8 +1,6 @@
 
-<app-sales-manager-page></app-sales-manager-page>
-<!-- <app-worker-page></app-worker-page> -->
-<!-- <app-worker-page></app-worker-page> -->
-<app-unit-manager-page></app-unit-manager-page>
-<!-- <app-header></app-header>
-<app-order-card></app-order-card> -->
+<!--<app-sales-manager-page></app-sales-manager-page>-->
+<!--<app-worker-page></app-worker-page>-->
+<!--<app-unit-manager-page></app-unit-manager-page>-->
+<!--<app-order-card></app-order-card>-->
 <!-- <app-materials-table></app-materials-table> -->
