--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
 <!--<app-sales-manager-page></app-sales-manager-page>-->
 <!--<app-worker-page></app-worker-page>-->
 <!--<app-unit-manager-page></app-unit-manager-page>-->
