--- a/frontend/src/app/order-card/order-card.component.html
+++ b/frontend/src/app/order-card/order-card.component.html
@@ -1,11 +1,11 @@
-<div [class.order-accepted]="order.status === 4" class="order">
+<div [class.order-accepted]="order.status == active" class="order">
   <div class="order-header">
-    <div class="order-header-item">{{ order.name }}</div>
+    <div class="order-header-item">{{ order.toyName }}</div>
     <div class="order-header-item">
-      <span *ngIf="newOrder" class="material-icons icon-style">
+      <span *ngIf="newOrder" (click)="assignToWorker()" class="material-icons icon-style">
         assignment_return
       </span>
-      <span *ngIf="withDelete" class="material-icons icon-style delete-icon">
+      <span *ngIf="withDelete" (click)="deleteOrder(order.id)" class="material-icons icon-style delete-icon">
         add_circle
       </span>
     </div>
@@ -13,19 +13,19 @@
   <div class="order-properties">
     <div class="order-properties-item">{{ order.quantity }} штук</div>
     <div class="order-properties-item">
-      <div *ngIf="order.status < 4; else elseBlock" class="priority-block">
+      <div *ngIf="order.status !== done; else elseBlock" class="priority-block">
         <div style="margin-right: 16px">Пріоритет</div>
         <div
-          [class.red]="statusMapping[order.status] === 'red'"
-          [class.green]="statusMapping[order.status] === 'green'"
-          [class.yellow]="statusMapping[order.status] === 'yellow'"
+          [class.red]="order.priority.toUpperCase() === 'RED'"
+          [class.green]="order.priority.toUpperCase() === 'GREEN'"
+          [class.yellow]="order.priority.toUpperCase() === 'YELLOW'"
           class="priority-status"
         ></div>
       </div>
-      <ng-template #elseBlock>Прийнято</ng-template>
-      <div>до {{ order.dueDate }}</div>
+      <ng-template #elseBlock>Виконано</ng-template>
+      <div>до {{ order.deadline | date: 'dd:MM:YYYY' }}</div>
     </div>
-    <div *ngIf="order.status < 4 && worker" class="submit-order material-icons">
+    <div *ngIf="order.status == active && worker" (click)="changeOrderStatus(order.id)" class="submit-order material-icons">
       done
     </div>
   </div>
