--- a/frontend/src/app/unit-manager-page/unit-manager-page.component.html
+++ b/frontend/src/app/unit-manager-page/unit-manager-page.component.html
@@ -1,15 +1,15 @@
 <app-header></app-header>
 <div class="page-layout">
   <div class="page-collumn">
-    <div class="collumn-header">Робітник</div>
-    <div class="collumn-body">
+    <div class="collumn-header">Робітники</div>
+    <div class="collumn-body" [ngClass]="{'selected': worker.checked}" (click)="selectWorker(worker)" *ngFor="let worker of workers">
       <div class="avatar-container">
         <img
           class="avatar-image"
           src="./assets/Profile_avatar_placeholder_large.png"
         />
       </div>
-      <div class="avatar-text">Ім'я</div>
+      <div class="avatar-text">{{worker.login}}</div>
     </div>
   </div>
 
@@ -84,7 +84,7 @@
       <div *ngIf="!newOrdersCollapse">
         <div *ngFor="let order of newOrders">
           <div class="order-container">
-            <app-order-card [order]="order" [newOrder]="true"></app-order-card>
+            <app-order-card [order]="order" [newOrder]="true" [workerId]="selectedWorker.id"></app-order-card>
           </div>
         </div>
       </div>
