--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -13,6 +13,6 @@
     </div>
 
 
-    <p (click)="router.navigate(['register']);" style="cursor: pointer;">registration...</p>
+<!--    <p (click)="router.navigate(['register']);" style="cursor: pointer;">registration...</p>-->
   </form>
 </div>
