--- a/frontend/src/app/unit-manager-page/unit-manager-page.component.html
+++ b/frontend/src/app/unit-manager-page/unit-manager-page.component.html
@@ -37,6 +37,8 @@
               <app-order-card
                 [order]="order"
                 [withDelete]="true"
+                [unassign]="true"
+                [workerId]="selectedWorker.id"
               ></app-order-card>
             </div>
           </div>
