--- a/frontend/src/app/materials-table/materials-table.component.html
+++ b/frontend/src/app/materials-table/materials-table.component.html
@@ -1,33 +1,3 @@
-<!-- <table mat-table [dataSource]="tableDataSrc" class="tab-border">
-  <ng-container *ngFor="let col of tableCols">
-    <ng-container matColumnDef="{{ col }}">
-      <th *matHeaderCellDef class="tab-head">{{ col | titlecase }}</th>
-      <td *matCellDef="let material" class="tab-row">
-        {{ material[col] }}
-      </td>
-    </ng-container>
-  </ng-container>
-
-  <ng-container matCollumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
-    <td mat-cell *matCellDef="let material">{{ material.name }}</td>
-  </ng-container>
-
-  <ng-container matCollumnDef="quantity">
-    <th mat-header-cell *matHeaderCellDef>Quantity</th>
-    <td mat-cell *matCellDef="let material">{{ material.quantity }}</td>
-  </ng-container>
-
-  <ng-container>
-    <th mat-header-cell *matHeaderCellDef></th>
-    <td mat-cell *matCellDef="let material">
-      <span class="material-icons">add_circle_outline</span>
-    </td>
-  </ng-container>
-
-  <tr mat-header-row *matHeaderRowDef="tableCols"></tr>
-  <tr mat-row *matRowDef="let row; columns: tableCols"></tr>
-</table> -->
 <table class="tab-border">
   <ng-container>
     <tr>
@@ -41,12 +11,46 @@
       <td class="tab-row">{{ col.name }}</td>
       <td class="tab-row">{{ col.quantity }}</td>
       <td>
-        <span
-          (click)="tableAction()"
-          style="color: lightgray; cursor: pointer"
-          class="material-icons"
-          >add_circle_outline</span
-        >
+        
+
+          <button type="button" mdbBtn color="default" rounded="true" data-toggle="modal" data-target="#basicExample"
+            (click)="frame.show()" mdbWavesEffect>
+            <span style="color: lightgray; cursor: pointer" class="material-icons-outlined">edit</span>
+          </button>
+
+          <div mdbModal #frame="mdbModal" class="modal fade left" id="frameModalTop" tabindex="-1" role="dialog"
+            aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header text-center">
+                  <h4 class="modal-title w-100 font-weight-bold">Add material quantity</h4>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="frame.hide()">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body mx-3">
+                  <div class="md-form mb-5">
+                    <input type="number" id="defaultForm-email" [formControl]="matQuantityFormModalNumber" class="form-control" mdbInput
+                      mdbValidate>
+                    <label for="defaultForm-email">Enter amount of materials</label>
+                    <mdb-error *ngIf="matQuantityFormModalNumber.invalid && (matQuantityFormModalNumber.dirty || matQuantityFormModalNumber.touched)">
+                      Input invalid
+                    </mdb-error>
+                    <mdb-success *ngIf="matQuantityFormModalNumber.valid && (matQuantityFormModalNumber.dirty || matQuantityFormModalNumber.touched)">
+                      Input
+                      valid
+                    </mdb-success>
+                  </div>        
+                </div>
+                <div class="modal-footer d-flex justify-content-center">
+                  <button (click)="removeMaterials()" mdbBtn color="default" class="waves-light" mdbWavesEffect>Remove materials</button>
+                  <button (click)="addMaterials()" mdbBtn color="default" class="waves-light" mdbWavesEffect>Add materials</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
       </td>
     </tr>
   </ng-container>
