--- a/frontend/src/app/worker-page/worker-page.component.html
+++ b/frontend/src/app/worker-page/worker-page.component.html
@@ -61,6 +61,49 @@
 
   <div class="page-collumn">
     <div class="collumn-header">Матеріали</div>
+    <div>
+    <button type="button" mdbBtn color="default" rounded="true" data-toggle="modal" data-target="#basicExample"
+      (click)="frame.show()" mdbWavesEffect><span class="material-icons-outlined">
+      add_circle_outline
+    </span></button>
+
+
+              <div mdbModal #frame="mdbModal" class="modal fade left" id="frameModalTop" tabindex="-1" role="dialog"
+                aria-labelledby="myModalLabel" aria-hidden="true">
+                <div class="modal-dialog" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header text-center">
+                      <h4 class="modal-title w-100 font-weight-bold">Add new material</h4>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="frame.hide()">
+                        <span aria-hidden="true">&times;</span>
+                      </button>
+                    </div>
+                    <div class="modal-body mx-3">
+                      <div class="md-form mb-5">
+                        <input type="text" id="defaultForm-email" [formControl]="newMatFormModalName" class="form-control"
+                          mdbInput mdbValidate>
+                        <label for="defaultForm-email">Enter new material name</label>
+                        <mdb-error
+                          *ngIf="newMatFormModalName.invalid && (newMatFormModalName.dirty || newMatFormModalName.touched)">
+                          Input invalid
+                        </mdb-error>
+                        <mdb-success
+                          *ngIf="newMatFormModalName.valid && (newMatFormModalName.dirty || newMatFormModalName.touched)">
+                          Input
+                          valid
+                        </mdb-success>
+                      </div>
+                    </div>
+                    <div class="modal-footer d-flex justify-content-center">
+                      <button (click)="createMaterial()" mdbBtn color="default" class="waves-light" mdbWavesEffect>Create
+                        material</button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
+    </div>
     <div class="materials-table-container">
       <app-materials-table [tableData]="materials"></app-materials-table>
     </div>
