--- a/frontend/src/app/order-card/order-card.component.html
+++ b/frontend/src/app/order-card/order-card.component.html
@@ -9,7 +9,7 @@
         delete_forever
       </span>
       <span *ngIf="unassign" (click)="unassignOrder()" class="material-icons icon-style">
-        assignment_returned
+        forward
       </span>
     </div>
   </div>
