--- a/frontend/src/app/order-card/order-card.component.scss
+++ b/frontend/src/app/order-card/order-card.component.scss
@@ -57,7 +57,7 @@
 
 .submit-order {
   color: black;
-  background-color: rgb(92 143 221);
+  background-color: #4ca700;
   font-size: 40px;
   width: 40px;
   height: 40px;
