--- a/frontend/src/app/worker-page/worker-page.component.scss
+++ b/frontend/src/app/worker-page/worker-page.component.scss
@@ -6,6 +6,17 @@
   flex: 3;
 }
 
+.user-name {
+  margin-right: 24px;
+  font-size: 24px;
+}
+
+.link {
+  outline: none;
+  cursor: pointer;
+}
+
+
 .collumn-header {
   text-align: center;
   font-size: 22px;
