--- a/frontend/src/app/login/login.component.scss
+++ b/frontend/src/app/login/login.component.scss
@@ -1,5 +1,5 @@
 .form__headline {
-  font-family: "Gill Sans MT";
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-style: normal;
   font-weight: 300;
   font-size: 40px;
@@ -10,4 +10,3 @@
   margin-bottom: 56px;
   color: black;
 }
-
