--- a/frontend/src/app/worker-page/worker-page.component.scss
+++ b/frontend/src/app/worker-page/worker-page.component.scss
@@ -17,6 +17,7 @@
 }
 
 .collumn-header {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
   font-size: 22px;
   line-height: 20px;
