--- a/frontend/src/app/materials-table/materials-table.component.scss
+++ b/frontend/src/app/materials-table/materials-table.component.scss
@@ -4,7 +4,7 @@
 }
 .tab-head {
   text-align: left;
-
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 24px;
   padding: 8px 0px 8px 24px;
 }
@@ -13,6 +13,7 @@
 }
 
 .tab-row {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: gray;
   text-align: left;
   font-size: 24px;
