--- a/frontend/src/app/sales-manager-page/sales-manager-page.component.scss
+++ b/frontend/src/app/sales-manager-page/sales-manager-page.component.scss
@@ -10,6 +10,7 @@
   border-left: 3px solid rgba(0, 0, 0, 0.2);
 }
 .collumn-header {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
   font-size: 22px;
   line-height: 20px;
