--- a/frontend/src/app/unit-manager-page/unit-manager-page.component.scss
+++ b/frontend/src/app/unit-manager-page/unit-manager-page.component.scss
@@ -7,6 +7,7 @@
 }
 
 .collumn-header {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   text-align: center;
   font-size: 22px;
   line-height: 20px;
